--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     gtag('config', 'UA-114409337-6');
   </script>
 
-  <link rel="stylesheet" href="/app.css">
+  <link rel="stylesheet" href="/app/styles/app.scss">
   <title>State Channels - Instant P2P Ethereum Transactions</title>
 </head>
 
@@ -111,7 +111,6 @@
           <!-- #if desktop -->
           <nav class="nav__right mobile-off">
             <a class="nav__right__item" href="/team">community.</a>
-            <nav class="nav__dropdown">
               <a class="nav__right__item">developers.</a>
               <ul class="nav__dropdown__list">
                 <li>
@@ -124,7 +123,7 @@
                   <a class="nav__dropdown__item" target="_blank" href="https://github.com/statechannels">code.</a>
                 </li>
               </ul>
-            </nav>
+
             <a class="nav__right__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
           </nav>
           <!-- /if desktop -->
