--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     gtag('config', 'UA-114409337-6');
   </script>
 
-  <link rel="stylesheet" href="/app/styles/app.scss">
+  <link rel="stylesheet" href="/app.css">
   <title>State Channels - Instant P2P Ethereum Transactions</title>
 </head>
 
