--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,8 @@
           <!-- #if desktop -->
           <nav class="nav__right mobile-off">
             <a class="nav__right__item" href="/team">community.</a>
+            <nav class="nav__dropdown">
+              
               <a class="nav__right__item">developers.</a>
               <ul class="nav__dropdown__list">
                 <li>
