Update picture and link

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="team-content__item__logos__item">
-                  <a>
+                  <a href="https://alexgap.dev/">
                     <img src="../assets/people/alex.png"></img>
                   </a>
                   <ul class="member-list">
