--- a/public/team/index.html
+++ b/public/team/index.html
@@ -198,8 +198,8 @@
                 </a>
               </div>
               <div class="team-content__item__logos">
-                <a href="https://consensys.net/">
-                  <img src="../assets/logos/consensys.svg" alt="Consensys">
+                <a href="https://mesh.xyz/">
+                  <img src="../assets/logos/mesh.png" alt="Consensys">
                 </a>
               </div>
             </div>
