update alt text

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -176,7 +176,7 @@
               </div>
               <div class="team-content__item__logos">
                 <a href="https://mesh.xyz/">
-                  <img src="../assets/logos/mesh.png" alt="Consensys">
+                  <img src="../assets/logos/mesh.png" alt="Consensys Mesh">
                 </a>
               </div>
             </div>
