--- a/public/team/index.html
+++ b/public/team/index.html
@@ -177,6 +177,11 @@
                   <img src="../assets/logos/mesh.png" alt="Consensys Mesh">
                 </a>
               </div>
+              <div class="team-content__item__logos">
+                <a href="https://fil.org/">
+                  <img src="../assets/logos/filecoin-foundation.png" alt="Filecoin Foundation">
+                </a>
+              </div>
             </div>
           </div>
 
