replace png with svg

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -148,7 +148,7 @@
               </div>
               <div class="team-content__item__logos">
                 <a href="https://fil.org/">
-                  <img src="../assets/logos/filecoin-foundation.png" alt="Filecoin Foundation">
+                  <img src="../assets/logos/filecoin-foundation.svg" alt="Filecoin Foundation">
                 </a>
               </div>
             </div>
