add docs link to main nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -173,6 +173,12 @@
               <a
                 class="nav__right__item"
                 target="_blank"
+                href="https://docs.statechannels.org"
+                >docs.</a
+              >
+              <a
+                class="nav__right__item"
+                target="_blank"
                 href="https://github.com/statechannels"
                 >github.</a
               >
@@ -201,6 +207,12 @@
           <div class="mobile-menu mobile-only">
             <button class="mobile-menu__close">close</button>
             <a class="mobile-menu__item" href="/team">team.</a>
+            <a
+              class="nav__right__item"
+              target="_blank"
+              href="https://docs.statechannels.org"
+              >docs.</a
+            >
             <a
               class="mobile-menu__item"
               target="_blank"
