--- a/public/team/index.html
+++ b/public/team/index.html
@@ -58,6 +58,7 @@
           <!-- #if desktop -->
           <nav class="nav__right mobile-off">
             <a class="nav__right__item active" href="/team">team.</a>
+            <a class="nav__right__item" target="_blank" href="https://docs.statechannels.org">docs.</a>
             <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">github.</a>
             <a class="nav__right__item" target="_blank" href="https://research.statechannels.org">forum.</a>
             <a class="nav__right__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
@@ -74,6 +75,7 @@
         <div class="mobile-menu mobile-only">
           <button class="mobile-menu__close">close</button>
           <a class="mobile-menu__item active" href="/team">team.</a>
+          <a class="nav__right__item" target="_blank" href="https://docs.statechannels.org">docs.</a>
           <a class="mobile-menu__item" target="_blank" href="https://github.com/statechannels">github.</a>
           <a class="mobile-menu__item" target="_blank" href="https://research.statechannels.org">forum.</a>
           <a class="mobile-menu__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
