--- a/public/index.html
+++ b/public/index.html
@@ -264,7 +264,7 @@
                     class="btn btn--stroke"
                     target="_blank"
                     href="https://docs.statechannels.org"
-                    >docs</a
+                    >the docs</a
                   >
                   <a
                     class="btn btn--stroke"
