simplify call to action

--- a/public/index.html
+++ b/public/index.html
@@ -257,20 +257,8 @@
                   <a
                     class="btn btn--stroke"
                     target="_blank"
-                    href="https://blog.statechannels.org"
-                    >the blog</a
-                  >
-                  <a
-                    class="btn btn--stroke"
-                    target="_blank"
                     href="https://docs.statechannels.org"
-                    >the docs</a
-                  >
-                  <a
-                    class="btn btn--stroke"
-                    target="_blank"
-                    href="https://github.com/statechannels"
-                    >the code</a
+                    >read the docs</a
                   >
                 </div>
               </div>
