fix incorrect class

--- a/public/index.html
+++ b/public/index.html
@@ -208,7 +208,7 @@
             <button class="mobile-menu__close">close</button>
             <a class="mobile-menu__item" href="/team">team.</a>
             <a
-              class="nav__right__item"
+              class="mobile-menu__item"
               target="_blank"
               href="https://docs.statechannels.org"
               >docs.</a
