--- a/public/team/index.html
+++ b/public/team/index.html
@@ -369,6 +369,11 @@
           </footer>
         </div>
       </div>
+      <div class="callout-banner">
+        <a href="https://boards.greenhouse.io/consensysinc/jobs/4602604004">
+          We're hiring: apply now!</a
+        >
+      </div>
       <!-- End Footer -->
     </div>
     <!-- End Wrapper -->
