add contact link (emails magmo)

--- a/public/index.html
+++ b/public/index.html
@@ -194,6 +194,12 @@
                 href="https://blog.statechannels.org"
                 >blog.</a
               >
+              <a
+                class="nav__right__item"
+                target="_blank"
+                href="mailto:contact@magmo.com"
+                >contact.</a
+              >
             </nav>
             <!-- /if desktop -->
 
