use dropdown email link under contact

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -185,12 +185,19 @@
                 href="https://blog.statechannels.org"
                 >blog.</a
               >
-              <a
-                class="nav__right__item"
-                target="_blank"
-                href="mailto:contact@magmo.com"
-                >contact.</a
-              >
+              <li class="nav__dropdown">
+                <a class="nav__right__item">contact.</a>
+                <ul class="nav__dropdown__list">
+                  <li>
+                    <a
+                      class="nav__dropdown__item"
+                      target="_blank"
+                      href="mailto:contact@magmo.com"
+                      >email.</a
+                    >
+                  </li>
+                </ul>
+              </li>
             </nav>
             <!-- /if desktop -->
 
