extend contact dropdown to mobile

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -210,6 +210,7 @@
 
           <div class="mobile-menu mobile-only">
             <button class="mobile-menu__close">close</button>
+            <ul>
             <a class="mobile-menu__item active" href="/team">team.</a>
             <a
               class="mobile-menu__item"
@@ -235,6 +236,20 @@
               href="https://blog.statechannels.org"
               >blog.</a
             >
+            <li class="mobile-menu__item">
+              <label for="drop" class="mobile-submenu-toggle">contact +</label>
+              <input type="checkbox" id="drop" />
+              <ul class="mobile-menu__level1">
+                <li class="mobile-menu__item__sub">
+                  <a
+                    target="_blank"
+                    href="mailto:research@magmo.com"
+                    class="mobile-menu__item__sub"
+                    >email.</a
+                  >
+                </li>
+              </ul>
+            </li>
           </div>
         </div>
       </div>
