--- a/public/team/index.html
+++ b/public/team/index.html
@@ -211,45 +211,48 @@
           <div class="mobile-menu mobile-only">
             <button class="mobile-menu__close">close</button>
             <ul>
-            <a class="mobile-menu__item active" href="/team">team.</a>
-            <a
-              class="mobile-menu__item"
-              target="_blank"
-              href="https://docs.statechannels.org"
-              >docs.</a
-            >
-            <a
-              class="mobile-menu__item"
-              target="_blank"
-              href="https://github.com/statechannels"
-              >github.</a
-            >
-            <a
-              class="mobile-menu__item"
-              target="_blank"
-              href="https://research.statechannels.org"
-              >forum.</a
-            >
-            <a
-              class="mobile-menu__item"
-              target="_blank"
-              href="https://blog.statechannels.org"
-              >blog.</a
-            >
-            <li class="mobile-menu__item">
-              <label for="drop" class="mobile-submenu-toggle">contact +</label>
-              <input type="checkbox" id="drop" />
-              <ul class="mobile-menu__level1">
-                <li class="mobile-menu__item__sub">
-                  <a
-                    target="_blank"
-                    href="mailto:research@magmo.com"
-                    class="mobile-menu__item__sub"
-                    >email.</a
-                  >
-                </li>
-              </ul>
-            </li>
+              <a class="mobile-menu__item active" href="/team">team.</a>
+              <a
+                class="mobile-menu__item"
+                target="_blank"
+                href="https://docs.statechannels.org"
+                >docs.</a
+              >
+              <a
+                class="mobile-menu__item"
+                target="_blank"
+                href="https://github.com/statechannels"
+                >github.</a
+              >
+              <a
+                class="mobile-menu__item"
+                target="_blank"
+                href="https://research.statechannels.org"
+                >forum.</a
+              >
+              <a
+                class="mobile-menu__item"
+                target="_blank"
+                href="https://blog.statechannels.org"
+                >blog.</a
+              >
+              <li class="mobile-menu__item">
+                <label for="drop" class="mobile-submenu-toggle"
+                  >contact +</label
+                >
+                <input type="checkbox" id="drop" />
+                <ul class="mobile-menu__level1">
+                  <li class="mobile-menu__item__sub">
+                    <a
+                      target="_blank"
+                      href="mailto:research@magmo.com"
+                      class="mobile-menu__item__sub"
+                      >email.</a
+                    >
+                  </li>
+                </ul>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
