update link to jd

--- a/public/index.html
+++ b/public/index.html
@@ -358,9 +358,7 @@
         </div>
       </div>
       <div class="callout-banner">
-        <a href="https://boards.greenhouse.io/consensysinc/jobs/4602604004">
-          We're hiring: apply now!</a
-        >
+        <a href="../careers/"> We're hiring: apply now!</a>
       </div>
       <!-- End Footer -->
     </div>
