remove references to web archive

--- a/public/careers/index.html
+++ b/public/careers/index.html
@@ -338,8 +338,7 @@
                     This is a remote role. To learn more visi</span
                   ><span style="font-weight: 400">t</span
                   ><span style="font-weight: 400"> </span
-                  ><a
-                    href="https://web.archive.org/web/20221206040104/https://mesh.xyz/"
+                  ><a href="https://mesh.xyz/"
                     ><span style="font-weight: 400">https://mesh.xyz/</span></a
                   ><span style="font-weight: 400">&nbsp;</span>
                 </p>
@@ -362,8 +361,7 @@
                     deploy a network of clients in production — for example as a
                     part of&nbsp; the Filecoin Retrieval Market. To find out
                     more, check out </span
-                  ><a
-                    href="https://web.archive.org/web/20221206040104/https://statechannels.org/"
+                  ><a href="https://statechannels.org/"
                     ><span style="font-weight: 400"
                       >https://statechannels.org/</span
                     ></a
