--- a/public/careers/index.html
+++ b/public/careers/index.html
@@ -527,7 +527,8 @@
                   <div id="main_fields">
                     <h2 class="heading">Apply for this Job</h2>
                     By sending a CV/Resume and cover letter to
-                    <a mailto="statechannels@mesh.xyz">statechannels@mesh.xyz</a
+                    <a href="mailto:statechannels@mesh.xyz"
+                      >statechannels@mesh.xyz</a
                     >.
                   </div>
                 </div>
