revert global style changes
introduce "bullets" class and use in careers page

--- a/public/careers/index.html
+++ b/public/careers/index.html
@@ -303,7 +303,7 @@
                     products, and investments that include:</span
                   >
                 </p>
-                <ul style="list-style: circle">
+                <ul class="bullets">
                   <li>
                     <span style="font-weight: 400"
                       >A portfolio of 190 equity and token positions</span
@@ -384,7 +384,7 @@
                   >
                 </p>
                 <p><strong>On our small team, we value:</strong></p>
-                <ul style="list-style: circle">
+                <ul class="bullets">
                   <li>
                     <span style="font-weight: 400"
                       >Clear verbal and written communication for exchanging
@@ -452,7 +452,7 @@
                 </p>
                 <p>&nbsp;</p>
                 <h3><strong>Why join MESH?&nbsp;</strong></h3>
-                <ul style="list-style: circle">
+                <ul class="bullets">
                   <li>
                     <strong
                       >One of the most recognized brands in the blockchain
