add sam stokes team member

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -306,6 +306,16 @@
                       <li>Colin Kennedy</li>
                     </ul>
                   </div>
+
+                  <div class="team-content__item__logos__item">
+                    <a>
+                      <img src="../assets/people/sam.png" />
+                    </a>
+                    <ul class="member-list">
+                      <li>Sam Stokes</li>
+                    </ul>
+                  </div>
+
                 </div>
               </div>
               <div class="team-content__item">
